# OSPSD

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
ai_conversation_client/: pyproject.toml
integration-results/: integration-results.xml
mail_ai_spam_detector/: README.md  pyproject.toml
mail_ai_spam_detector/src/mail_ai_spam_detector/: detector.py
mail_api/: README.md
mail_api/src/mail_api/: __init__.py
mail_gmail_impl/: README.md  pyproject.toml
mail_gmail_impl/src/mail_gmail_impl/: __init__.py  constants.py  gmail_attachment.py  gmail_client.py  gmail_message.py
test-results/: unit-results.xml
test-results/unit/: results.xml
tests/: pyproject.toml
tests/src/scripts/: README.md  __init__.py  _manual_test.py
tests/src/tests/integration/: __init__.py  test_ai_conversation_client_live.py  test_attachment.py  test_detector_ci.py  test_detector_live.py  test_gmail_live.py  test_manual.py
tests/src/tests/unit/: __init__.py  test_gmail_attachment.py  test_gmail_impl.py  test_interface.py
