[project]
name = "maigic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "ruff>=0.6.8",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.5.0"
]

[tool.uv.workspace]
members = ["mail_api", "mail_gmail_impl", "tests"]
