[project]
name = "maigic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "ruff>=0.6.8",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.5.0",
    "google-api-python-client>=2.125.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "html2text>=2020.1.16",
    "requests",
    "python-dotenv",
    "google-generativeai"
]

[tool.uv.workspace]
members = ["mail_api", "mail_gmail_impl", "ai_conversation_client", "tests"]

[tool.pytest.ini_options]
pythonpath = [
    "mail_api/src",
    "mail_gmail_impl/src",
    "ai_conversation_client/src"
]
