[project]
name = "mail_ai_spam_detector"
version = "0.1.0"
description = "Detect spam probability in emails using a mail client and AI conversation client."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests",
    "python-dotenv",
    "google-generativeai"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.11.0",
    "ruff>=0.6.8",
    "coverage>=7.5.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
