[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mail-api",
    "mail-gmail-impl",
]

[project.scripts]
main = "tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mail-api = { workspace = true }
mail-gmail-impl = { workspace = true }
